Attempt to fix article with on narrow screens

--- a/style/base.css
+++ b/style/base.css
@@ -177,7 +177,8 @@ input[type="email"] {
 }
 
 .article-link-category {
-  margin: 0 0 .3em 0;
+  margin: 0 0 .4em 0;
+  line-height: 1.2em;
   font-size: .8em;
 }
 
